--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecyclerviewWithPagination</string>
+    <string name="movie_name">Movie Name</string>
 </resources>
